--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@ $(document).ready(function(){
     </div>
     <div class="main" id="section2">
         <img src="media/heading1.png" alt="header" id='pageheader' >
-        <a href="page1.html"><img src='media/textbanner.png' alt='' class='pageBtn' id='pageBtn1'></a>
+        <a link="https://editor.p5js.org/Red.Queen/full/lCZGoT9ui"><img src='media/textbanner.png' alt='' class='pageBtn' id='pageBtn1'></a>
         <a href="page2.html"><img src='media/loq.png' alt='' class='pageBtn' id='pageBtn2'></a>
         <a href="page3.html"><img src='media/novideo.png' alt='' class='pageBtn' id='pageBtn3'></a>
         <a href="page4.html"><img src='media/vis.png' alt='' class='pageBtn' id='pageBtn4'></a>
